--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,8 @@ sourceCompatibility = '1.8'
 dependencies {
 
   compile "io.vertx:vertx-core:$vertxVersion"
+  compile "io.vertx:vertx-web:$vertxVersion"
+  compile "io.vertx:vertx-web-templ-thymeleaf:$vertxVersion"
   compile "io.vertx:vertx-unit:$vertxVersion"
   compile "org.slf4j:slf4j-api:$slf4jVersion"
   compile "ch.qos.logback:logback-classic:$logbackVersion"
