--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,8 @@ local.properties
 .settings/
 .loadpath
 .recommenders
+.project
+.classpath
 
 # External tool builders
 .externalToolBuilders/
@@ -142,9 +144,6 @@ Icon
 Network Trash Folder
 Temporary Items
 .apdisk
-
-
-
 
 
 ### NetBeans ###
