--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,12 @@
-plugins {
-  id 'java'
-  id 'application'
-  id 'com.github.johnrengelman.shadow' version '2.0.1'
+buildscript {
+  repositories {
+    mavenLocal()
+    jcenter()
+    maven { url "https://plugins.gradle.org/m2/" }
+  }
+  dependencies {
+    classpath "com.github.jengelman.gradle.plugins:shadow:2.0.2"
+  }  
 }
 
 ext {
@@ -10,46 +15,25 @@ ext {
   logbackVersion = '1.2.3'
 }
 
-repositories {
-  mavenLocal()
-  jcenter()
-  maven { url "https://plugins.gradle.org/m2/" }
-}
+subprojects {
+  apply plugin: 'java'
+  apply plugin: 'application'
+  apply plugin: 'com.github.johnrengelman.shadow'
 
-version = '1.0.0-SNAPSHOT'
-sourceCompatibility = '1.8'
+  version = '1.0.0-SNAPSHOT'
+  sourceCompatibility = '1.8'
 
-dependencies {
-
-  compile "io.vertx:vertx-core:$vertxVersion"
-  compile "io.vertx:vertx-web:$vertxVersion"
-  compile "io.vertx:vertx-web-templ-thymeleaf:$vertxVersion"
-  compile "io.vertx:vertx-unit:$vertxVersion"
-  compile "org.slf4j:slf4j-api:$slf4jVersion"
-  compile "ch.qos.logback:logback-classic:$logbackVersion"
-}
-
-mainClassName = 'io.vertx.core.Launcher'
-def mainVerticleName = 'com.example.demo.MainVerticle'
-def watchForChange = 'src/**/*.java'
-def doOnChange = './gradlew classes'
-
-
-shadowJar {
-  classifier = 'fat'
-  mergeServiceFiles {
-    include 'META-INF/services/io.vertx.core.spi.VerticleFactory'
+  repositories {
+    mavenLocal()
+    jcenter()
+    maven { url "https://plugins.gradle.org/m2/" }
   }
-}
 
-run {
-  args = ['run', 
-          mainVerticleName,
-          "--redeploy=$watchForChange",
-          "--launcher-class=$mainClassName",
-          "--on-redeploy=$doOnChange"]
-}
-
-task wrapper(type: Wrapper) {
-  gradleVersion = '4.0'
+  dependencies {
+    compile "io.vertx:vertx-core:$vertxVersion"
+    compile "io.vertx:vertx-web:$vertxVersion"
+    compile "io.vertx:vertx-unit:$vertxVersion"
+    compile "org.slf4j:slf4j-api:$slf4jVersion"
+    compile "ch.qos.logback:logback-classic:$logbackVersion"
+  }
 }
